# gist-2.3

./: AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  README  confdefs.h  config.status  configure  configure.in  libtool  run-configure.sh
doc/: citing.html  download.html  gist-fast-classify.html  gist-kernel.html  runsvm.html
scripts/: Makefile  Makefile.am  Makefile.in  gist-rfe.in  gist-score-svm.in  gist-sigmoid  gist-sigmoid.in  gist2html.in
src/: Makefile  Makefile.am  Makefile.in  array.c  array.h  class-array.c  class-array.h  classify.c  classify.h  cmdline.h  compute-kernel.c  compute-kernel.h  compute-weights.c  compute-weights.h  eigens.c  eigens.h  fast-classify.c  fselect.c  fselect.h  gist-classify  gist-fast-classify  gist-fselect  gist-kernel  gist-kernel.c  gist-kfd  gist-kpca  gist-matrix  gist-project  gist-train-svm  kernel-pca.c  kernel-pca.h  kernel.c  kernel.h  kfd.c  kfd.h  linear-algebra.c  linear-algebra.h  matrix.c  matrix.h  project.c  (+10 more)
src/.deps/: array.Plo  class-array.Plo  classify.Plo  compute-kernel.Plo  compute-weights.Plo  eigens.Plo  fast-classify.Plo  gist_classify-fselect.Po  gist_classify-rdb-matrix.Po  gist_classify-test-main.Po  gist_fast_classify-fast-classify.Po  gist_fast_classify-fselect.Po  gist_fast_classify-rdb-matrix.Po  gist_fast_classify-test-main.Po  gist_fselect-fselect.Po  gist_fselect-rdb-matrix.Po  gist_kernel-gist-kernel.Po  gist_kfd-fselect.Po  gist_kfd-kfd.Po  gist_kfd-rdb-matrix.Po  gist_kfd-train-main.Po  gist_kpca-fselect.Po  gist_kpca-kernel-pca.Po  gist_kpca-rdb-matrix.Po  gist_kpca-train-main.Po  gist_matrix-rdb-matrix.Po  gist_project-fselect.Po  gist_project-project.Po  gist_project-rdb-matrix.Po  gist_project-test-main.Po  gist_train_svm-fselect.Po  gist_train_svm-rdb-matrix.Po  gist_train_svm-train-main.Po  kernel.Plo  linear-algebra.Plo  matrix.Plo  project.Plo  rdb-matrix.Plo  string-list.Plo  test-main.Plo  (+1 more)
src/.libs/: libcommon.al
