#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.57)
AC_INIT
AC_REVISION($Id: configure.in,v 1.2 2005/09/20 15:18:23 pavlidis Exp $)
AM_INIT_AUTOMAKE(gist, 2.3)

AC_ARG_ENABLE(debug, 
[  --enable-debug  Turn on debugging mode],
[case "${enableval}" in 
yes) debug=true ;;
no) debug=false ;;
*) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac], [debug=false])

AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

AC_PATH_PROG(PERL, perl)

AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_LIBTOOL
#AC_PROG_RANLIB
AC_PROG_INSTALL

AC_CHECK_LIB(m, sin)

AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h sys/time.h unistd.h])

AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([floor gethostname pow sqrt strchr strerror])

AC_OUTPUT([Makefile src/Makefile scripts/Makefile])
